Fixed stretching issues, except fgl1

--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -31,6 +31,7 @@ canvas {
     left: 0;
     top: 0;
     z-index: 0;
+    height: 100%;
     background-color: #000000;
 }
 
@@ -38,6 +39,7 @@ canvas {
     position: absolute;
     left: 0;
     bottom: 0;
+    height: 48%;
     z-index: 1;
 }
 
@@ -52,6 +54,8 @@ canvas {
     position: absolute;
     left: 0;
     top: 0;
+    width: 100%;
+    height: 100%;
     z-index: 3;
 }
 
@@ -66,6 +70,8 @@ canvas {
 
 #dl {
     position: absolute;
+    width: 100%;
+    height: 100%;
     left: 0;
     top: 0;
     z-index: 5;
